# shell-gpt-rs

./: Cargo.toml  README.md
.github/workflows/: cargo.yml
src/: config.rs  encryption.rs  errors.rs  lib.rs  main.rs  openai.rs
