[package]
name = "shell-gpt-rs"
version = "0.1.0"
edition = "2021"
authors = ["rigwild <me@rigwild.dev>"]
repository = "https://github.com/rigwild/shell-gpt-rs"
homepage = "https://github.com/rigwild/shell-gpt-rs"
keywords = ["shell", "gpt", "chatgpt", "openai", "bash"]
categories = ["command-line-utilities"]
description = "Ask ChatGPT to generate a shell script for you"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
thiserror = "1.0"
directories = "5.0.0"
rand = "0.8.5"
orion = "0.17.4"
anyhow = "1.0.70"
users = "0.11.0"
